[tool.poetry]
name = "boto"
version = "0.1.0"
description = "Amazon Web Services API"
authors = ["Noah Masur <noah.masur@take2games.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.46"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
